--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -37,6 +37,11 @@ bower_components
 *.launch
 .settings/
 *.sublime-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # IDE - VSCode
 .vscode/*
@@ -56,6 +61,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 
 # Dependency directories
@@ -79,6 +85,9 @@ jspm_packages/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.*.local
+
 
 # next.js build output
 .next
