+documentation, новый метод api/getbyparameters для получения запроса по параметрам

--- a/Backend/parsing_api/parsing_api/parsing_api.csproj
+++ b/Backend/parsing_api/parsing_api/parsing_api.csproj
@@ -14,5 +14,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="parsing_api.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
