api/regions - метод загрузки регионов из БД

--- a/Backend/parsing_api/parsing_api/parsing_api.csproj
+++ b/Backend/parsing_api/parsing_api/parsing_api.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <None Update="parsing_api.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
