--- a/Backend/parsing_api/Support/Support.csproj
+++ b/Backend/parsing_api/Support/Support.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Request\GetRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\PostRequest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
