В API добавлена ссылка на библиотеку support

--- a/Backend/parsing_api/parsing_api/parsing_api.csproj
+++ b/Backend/parsing_api/parsing_api/parsing_api.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Support\Support.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="parsing_api.xml">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
