--- a/Backend/parsing_api/Support/Support.csproj
+++ b/Backend/parsing_api/Support/Support.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Request\GetRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request\PostRequest.cs" />
