--- a/Backend/parsing_api/PravosudieParser/App.config
+++ b/Backend/parsing_api/PravosudieParser/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PravosudieParser.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <applicationSettings>
+        <PravosudieParser.Properties.Settings>
+            <setting name="connectionString" serializeAs="String">
+                <value>Server=127.0.0.1;Port=5432;User Id=backenduser;Password=Qwerty123;Database=demhack3;CommandTimeOut=5000</value>
+            </setting>
+        </PravosudieParser.Properties.Settings>
+    </applicationSettings>
 </configuration>
