Ввод переменных в парсер

--- a/Backend/parsing_api/PravosudieParser/PravosudieParser.csproj
+++ b/Backend/parsing_api/PravosudieParser/PravosudieParser.csproj
@@ -99,5 +99,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="chromedriver.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
